# pico-gba

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  build.zig  memory.x  pico_sdk_import.cmake  shell.nix
common/: Cargo.toml
common/src/: lib.rs  registers.rs  video.rs
decoding/: decoder.py  test.s
firmware/: Cargo.toml  isr.rs  test.text
firmware/src/: isr.s  main.rs
simulation/: Cargo.toml
simulation/src/: main.rs
src/: CMakeLists.txt  main.c  main.rs  main.zig  ppu.c  ppu.h  registers.rs  video.rs
src/ppu/: sdl_wrap.c
src/screen/: CMakeLists.txt
src/screen/config/: DEV_Config.c  DEV_Config.h
src/screen/fatfs/: diskio.c  diskio.h  fatfs_storage.c  fatfs_storage.h  ff.h  ffconf.h  integer.h
src/screen/font/: font12.c  font16.c  font20.c  font24.c  font8.c  fonts.h
src/screen/lcd/: CMakeLists.txt  LCD_Bmp.c  LCD_Bmp.h  LCD_Driver.c  LCD_Driver.h  LCD_GUI.c  LCD_GUI.h  LCD_Touch.c  LCD_Touch.h
src/screen/sdcard/: MMC_SD.c  MMC_SD.h
zig-stuff/: build.zig  display.c  ppu.zig
